# shanyraq

./: Dockerfile  alembic.ini  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 8d3cdfedb88f_user_table_change_migration.py  8dc8ffe6005f_2_migration.py  96e61ee2aa4f_1_migration.py  bc790e123e20_add_model_comment_migration.py  d35806d604d0_add_total_comment_in_announcement_table_.py  ed02f31e67ce_announcement_change_migration.py
app/: announcements_repository.py  comments_repository.py  favorites_repository.py  main.py  models.py  user_repository.py
